# shadertrap

./: .editorconfig  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTORS  README.md  dev_shell.sh.template  doit.py
.github/workflows/: build.sh  build.yml  dev_build.sh  dev_build.yml  llvmpipe.sh  llvmpipe.yml  swiftshader.sh  swiftshader.yml
android_gradle/: build.gradle  gradle.properties  gradlew.bat  settings.gradle  shadertrap.sh
android_gradle/app/: build.gradle
android_gradle/gradle/wrapper/: gradle-wrapper.properties
docs/: shadertrap_language.md
examples/: arrayaddition.shadertrap  cube.shadertrap  flag.shadertrap  prefixsum.shadertrap  redtriangle.shadertrap  redtriangle_gl.shadertrap  rendertotexture.shadertrap  simplecompute.shadertrap  simplecompute_with_named_uniform.shadertrap
examples/GLES31/: computeHistogramOfValues_version1.shadertrap  computeHistogramOfValues_version2.shadertrap  computeHistogramOfValues_version3.shadertrap  computeHistogramOfValues_version4.shadertrap  computeHistogramOfValues_version5.shadertrap  computeHistogramOfValues_version6.shadertrap  cube.shadertrap  flag.shadertrap  interesting_uniforms.shadertrap  prefixsum.shadertrap  redtriangle.shadertrap  rendertotexture.shadertrap  simplecompute.shadertrap  simplecompute_with_named_uniform.shadertrap
examples/OpenGL45/: arrayReductionByAddition_version1.shadertrap  arrayReductionByAddition_version2.shadertrap  arrayReductionByAddition_version3.shadertrap  arrayReductionByAddition_version4.shadertrap  arrayReductionByAddition_version5.shadertrap  arrayReductionByBitwiseAnd_version1.shadertrap  arrayReductionByBitwiseAnd_version2.shadertrap  arrayReductionByBitwiseAnd_version3.shadertrap  arrayReductionByBitwiseAnd_version4.shadertrap  arrayReductionByBitwiseAnd_version5.shadertrap  arrayReductionByBitwiseOr_version1.shadertrap  arrayReductionByBitwiseOr_version2.shadertrap  arrayReductionByBitwiseOr_version3.shadertrap  arrayReductionByBitwiseOr_version4.shadertrap  arrayReductionByBitwiseOr_version5.shadertrap  arrayReductionByBitwiseXor_version1.shadertrap  arrayReductionByBitwiseXor_version2.shadertrap  arrayReductionByBitwiseXor_version3.shadertrap  arrayReductionByBitwiseXor_version4.shadertrap  arrayReductionByBitwiseXor_version5.shadertrap  arrayReductionByMax_version1.shadertrap  arrayReductionByMax_version2.shadertrap  arrayReductionByMax_version3.shadertrap  arrayReductionByMax_version4.shadertrap  arrayReductionByMax_version5.shadertrap  arrayReductionByMin_version1.shadertrap  arrayReductionByMin_version2.shadertrap  arrayReductionByMin_version3.shadertrap  arrayReductionByMin_version4.shadertrap  arrayReductionByMin_version5.shadertrap  arrayaddition.shadertrap  computeHistogramOfValues_version1.shadertrap  computeHistogramOfValues_version3.shadertrap  computeHistogramOfValues_version4.shadertrap  computeHistogramOfValues_version5.shadertrap  computeHistogramOfValues_version6.shadertrap  mat_mul.shadertrap  mat_mul4x4_parallel.shadertrap  mat_mul_4x4_not_paraller.shadertrap  mat_mul_not_parallel.shadertrap  (+1 more)
scripts/: check_all.sh  check_build.sh  check_clang_tidy.sh  check_clean_build.sh  check_compile_commands.sh  check_cppcheck.sh  check_cpplint.sh  check_format.sh  check_generated.py  check_headers.py  check_iwyu.sh  fix_format.sh  generate_get_gl_functions.py  generate_gl_struct.py  shadertrap_cc_files.sh  shadertrap_source_files.sh
src/: .clang-tidy  CPPLINT.cfg  iwyu.imp
src/generators/: generate_get_gl_functions.py  generate_gl_struct.py
src/libshadertrap/: CMakeLists.txt
src/libshadertrap/include/libshadertrap/: CPPLINT.cfg  api_version.h  checker.h  command.h  command_assert_equal.h  command_assert_pixels.h  command_assert_similar_emd_histogram.h  command_bind_sampler.h  command_bind_shader_storage_buffer.h  command_bind_storage_buffer.h  command_bind_texture.h  command_bind_uniform_buffer.h  command_compile_shader.h  command_create_buffer.h  command_create_empty_texture_2d.h  command_create_program.h  command_create_renderbuffer.h  command_create_sampler.h  command_declare_shader.h  command_dump_buffer_binary.h  command_dump_buffer_text.h  command_dump_renderbuffer.h  command_run_compute.h  command_run_graphics.h  command_set_sampler_or_texture_parameter.h  command_set_sampler_parameter.h  command_set_texture_parameter.h  command_set_uniform.h  command_visitor.h  compound_visitor.h  executor.h  gl_functions.h  glslang.h  helpers.h  make_unique.h  message_consumer.h  parser.h  shadertrap_program.h  texture_parameter.h  token.h  (+3 more)
src/libshadertrap/include_private/include/libshadertrap/: tokenizer.h
src/libshadertrap/src/: checker.cc  command.cc  command_assert_equal.cc  command_assert_pixels.cc  command_assert_similar_emd_histogram.cc  command_bind_sampler.cc  command_bind_shader_storage_buffer.cc  command_bind_storage_buffer.cc  command_bind_texture.cc  command_bind_uniform_buffer.cc  command_compile_shader.cc  command_create_buffer.cc  command_create_empty_texture_2d.cc  command_create_program.cc  command_create_renderbuffer.cc  command_create_sampler.cc  command_declare_shader.cc  command_dump_buffer_binary.cc  command_dump_buffer_text.cc  command_dump_renderbuffer.cc  command_run_compute.cc  command_run_graphics.cc  command_set_sampler_or_texture_parameter.cc  command_set_sampler_parameter.cc  command_set_texture_parameter.cc  command_set_uniform.cc  command_visitor.cc  compound_visitor.cc  executor.cc  helpers.cc  message_consumer.cc  parser.cc  shadertrap_program.cc  token.cc  tokenizer.cc  uniform_value.cc  values_segment.cc  vertex_attribute_info.cc
src/libshadertraptest/: .clang-tidy  CMakeLists.txt
src/libshadertraptest/include_private/include/libshadertraptest/: collecting_message_consumer.h  gtest.h
src/libshadertraptest/src/: checker_test.cc  collecting_message_consumer.cc  parser_test.cc
src/shadertrap/: CMakeLists.txt
src/shadertrap/include_private/include/shadertrap/: get_gl_functions.h
src/shadertrap/src/: CPPLINT.cfg  get_gl_functions.c  get_gl_functions.cc  main.cc
temp/: cppcheck.patch
(+41 files in other folders)
